# DEG

./: .gitignore
reference/: desc.txt
src/: CMakeLists.txt
src/Graph2gSpanFormat/: CMakeLists.txt  Option.cpp  Option.h  main.cpp
src/GraphFormater/: CMakeLists.txt
src/GraphFormatter/: CMakeLists.txt  Option.cpp  Option.h  dump.cpp  dump.h  main.cpp
src/MotifFormatter/: CMakeLists.txt  Option.cpp  Option.h  load.cpp  load.h  main.cpp
src/TGMaker/: CMakeLists.txt  Option.cpp  Option.h  main.cpp  tg-io.cpp  tg-io.h
src/Test/: CMakeLists.txt  idx-map.cpp
src/Tools/: CMakeLists.txt  idx-map.cpp  tmotif-count.cpp
src/libcommon/: CMakeLists.txt  Edge.cpp  Edge.h  Motif.cpp  Motif.h  MotifBuilder.cpp  Subject.h  SubjectInfo.cpp  SubjectInfo.h
src/libio/: CMakeLists.txt  fs.cpp  fs.h  io.cpp  io.h
src/libteg/: CMakeLists.txt  TemporalEdgeGraph.cpp  TemporalEdgeGraph.h  TemporalEdgeMotif.cpp  TemporalEdgeMotif.h  util-teg.cpp  util-teg.h
src/libutil/: CMakeLists.txt  IndexMapper.cpp  IndexMapper.h
test-result/: pick-count-result-apriori.sh  pick-count-result-gspan.sh
